@@ -1,0 +1,1 @@
+0001-pre-rebase-hook-capture-documentation-in-a-here-docum.diff
